test/reusable/error/wip/value_sel_nsel.bfr
# selector(cell) or selector(array) expectedと出るが、arrayは弾かないといけない
main {
  a: array(3) {
    i: index;
  };
} [
  + a@i
]